--- a/index.html
+++ b/index.html
@@ -260,14 +260,137 @@
 <!-- product -->
 <section id="product" class="product">
   <div class="container">
-  <div class="heading4">Our <span>Products</span></div>
-</div>
+    <div class="heading4">Featured <span>Products</span></div>
+  </div>
   <div class="container" id="container3">
-
     <div class="row">
       <div class="col-md-3 py-3 py-md-0">
         <div class="card">
           <img src="./arabica coffee.png" alt="">
           <div class="card-body">
-            <h3>Arabic Coffee</h3>
-          <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping
+            <h3>Arabica Coffee</h3>
+            <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 py-3 py-md-0">
+        <div class="card">
+          <img src="./Cappuccino coffee.png" alt="">
+          <div class="card-body">
+            <h3>Cappuccino Coffee</h3>
+            <p>$250 <strike>$350</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 py-3 py-md-0">
+        <div class="card">
+          <img src="./Black Coffee.png" alt="">
+          <div class="card-body">
+            <h3>Black Coffee</h3>
+            <p>$130 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 py-3 py-md-0">
+        <div class="card">
+          <img src="./Decaf caffee.png" alt="">
+          <div class="card-body">
+            <h3>Decaf Coffee</h3>
+            <p>$120 <strike>$150</strike> <span><i class="fa-solid fa-cart-shopping"></i></span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- product -->
+
+<!-- our gallery -->
+<div class="container" id="gallary">
+  <h1>Our <span>Gallery</span></h1>
+  <div class="row" style="margin-top: 30px;">
+    <div class="col-md-4 py-3 py-md-0">
+      <div class="card">
+        <img src="./image1.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4 py-3 py-md-0">
+      <div class="card">
+        <img src="./image2.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4 py-3 py-md-0">
+      <div class="card">
+        <img src="./image3.png" alt="">
+      </div>
+    </div>
+  </div>
+  <div class="row" style="margin-top: 30px;">
+    <div class="col-md-4 py-3 py-md-0">
+      <div class="card">
+        <img src="./image4.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4 py-3 py-md-0">
+      <div class="card">
+        <img src="./image5.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4 py-3 py-md-0">
+      <div class="card">
+        <img src="./image6.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- our gallery -->
+
+<!-- contact -->
+<section class="contact" id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <div class="heading6">Contact <span>Us</span></div>
+        <p>We would love to hear from you! Whether it's a question, feedback, or just to say hello, feel free to reach out. Our team is always happy to assist you.</p>
+        <input class="form-control" type="text" placeholder="Name" aria-label="default input example"><br>
+        <input class="form-control" type="email" placeholder="Email" aria-label="default input example"><br>
+        <input class="form-control" type="number" placeholder="Number" aria-label="default input example"><br>
+        <button id="contact-btn">Send Message</button>
+      </div>
+      <div class="col-md-5" id="col">
+        <h1>Info</h1>
+        <p><i class="fa-regular fa-envelope"></i> example@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i> +92000000000000000</p>
+        <p><i class="fa-solid fa-building-columns"></i> Karachi, Sindh, Pakistan</p>
+        <p>Feel free to visit us or contact us for more information.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- contact -->
+
+<!-- footer -->
+<footer id="footer">
+  <div class="footer-logo text-center"><img src="./logo.png" alt=""></div>
+  <div class="socail-links text-center">
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-facebook-f"></i>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-pinterest-p"></i>
+  </div>
+  <div class="credite text-center">
+      Designed By <a href="#">SA Coding</a>
+  </div>
+  <div class="copyright text-center">
+    &copy; Copyright <strong><span>Coffee Shop</span></strong>. All Rights Reserved
+  </div>
+</footer>
+<!-- footer -->
+
+<a href="#" class="arrow"><i><img src="./images/up-arrow.png" alt="" width="50px"></i></a>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+</body>
+</html>
