--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -361,7 +361,7 @@
         <h1>Info</h1>
         <p><i class="fa-regular fa-envelope"></i> example@gmail.com</p>
         <p><i class="fa-solid fa-phone"></i> +92000000000000000</p>
-        <p><i class="fa-solid fa-building-columns"></i> Karachi, Sindh, Pakistan</p>
+        <p><i class="fa-solid fa-building-columns"></i> gurugram , haryana</p>
         <p>Feel free to visit us or contact us for more information.</p>
       </div>
     </div>
@@ -380,7 +380,7 @@
     <i class="fa-brands fa-pinterest-p"></i>
   </div>
   <div class="credite text-center">
-      Designed By <a href="#">SA Coding</a>
+      Designed By <a href="#">NIKHIL SAINI</a>
   </div>
   <div class="copyright text-center">
     &copy; Copyright <strong><span>Coffee Shop</span></strong>. All Rights Reserved
